<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 ARM Ltd.
  ~ SPDX-License-Identifier: Apache-2.0
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorBackground"
    tools:context=".screens.fragments.settings.DeveloperOptionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feature_flags_text"
            android:fontFamily="@font/lato_bold"
            android:textSize="14sp"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feature_flags_desc_text"
            android:drawablePadding="20dp"
            android:fontFamily="@font/lato_regular"
            android:textSize="12sp"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"
            android:layout_marginBottom="15dp"
            />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cloudFeatureCard"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="?attr/cardColor"
            app:strokeColor="@drawable/stroke_color"
            app:strokeWidth="1dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cloud_flags_text"
                    android:fontFamily="@font/lato_bold"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorAccent"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/dividerColor"
                    android:alpha="0.12"
                    android:layout_marginTop="10dp"
                    />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="?attr/cardColor"
                    app:contentPadding="15dp"
                    app:cardCornerRadius="0dp"
                    app:rippleColor="?attr/colorAccent"
                    app:checkedIcon="@drawable/ic_check_light"
                    app:checkedIconTint="?attr/colorAccent"
                    android:id="@+id/cloudProdCard"
                    android:clickable="true"
                    android:checkable="true"
                    android:focusable="true"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cloud_url_prod_text"
                        android:fontFamily="@font/lato_regular"
                        android:textSize="15sp"
                        android:singleLine="true"
                        android:ellipsize="middle"
                        android:textColor="?attr/primaryTextColor"
                        android:id="@+id/cloudProdText"
                        />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentPadding="15dp"
                    app:cardBackgroundColor="?attr/cardColor"
                    app:rippleColor="?attr/colorAccent"
                    android:id="@+id/cloudStagingCard"
                    app:checkedIcon="@drawable/ic_check_light"
                    app:checkedIconTint="?attr/colorAccent"
                    android:clickable="true"
                    android:checkable="true"
                    android:focusable="true"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cloud_url_staging_text"
                        android:fontFamily="@font/lato_regular"
                        android:textSize="15sp"
                        android:singleLine="true"
                        android:ellipsize="middle"
                        android:textColor="?attr/primaryTextColor"
                        android:id="@+id/cloudStagingText"
                        />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    app:contentPadding="15dp"
                    app:cardCornerRadius="0dp"
                    app:cardBackgroundColor="?attr/cardColor"
                    app:rippleColor="?attr/colorAccent"
                    android:id="@+id/cloudIntegrationCard"
                    app:checkedIcon="@drawable/ic_check_light"
                    app:checkedIconTint="?attr/colorAccent"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cloud_url_integration_text"
                        android:fontFamily="@font/lato_regular"
                        android:textSize="15sp"
                        android:singleLine="true"
                        android:ellipsize="middle"
                        android:textColor="?attr/primaryTextColor"
                        android:id="@+id/cloudIntegrationText"
                        />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/authFeatureCard"
            app:cardBackgroundColor="?attr/cardColor"
            app:strokeColor="@drawable/stroke_color"
            app:strokeWidth="1dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_flags_text"
                    android:fontFamily="@font/lato_bold"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorAccent"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/dividerColor"
                    android:alpha="0.12"
                    android:layout_marginTop="10dp"
                    />

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_disable_reauth_text"
                    android:fontFamily="@font/lato_regular"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="?attr/primaryTextColor"
                    android:id="@+id/disableReAuthSwitch"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sdaFeatureCard"
            app:cardBackgroundColor="?attr/cardColor"
            app:strokeColor="@drawable/stroke_color"
            android:layout_marginTop="10dp"
            app:strokeWidth="1dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sda_flags_text"
                    android:fontFamily="@font/lato_bold"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorAccent"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/dividerColor"
                    android:alpha="0.12"
                    android:layout_marginTop="10dp"
                    />

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sda_virtual_mode_text"
                    android:fontFamily="@font/lato_regular"
                    android:layout_marginTop="10dp"
                    android:textColor="?attr/primaryTextColor"
                    android:id="@+id/disableVirtualDeviceSwitch"
                    />

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sda_disable_max_mtu_text"
                    android:fontFamily="@font/lato_regular"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="?attr/primaryTextColor"
                    android:id="@+id/disableMaxMTUSwitch"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/jobFeatureCard"
            app:cardBackgroundColor="?attr/cardColor"
            app:strokeColor="@drawable/stroke_color"
            android:layout_marginTop="10dp"
            app:strokeWidth="1dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/job_flags_text"
                    android:fontFamily="@font/lato_bold"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorAccent"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/dividerColor"
                    android:alpha="0.12"
                    android:layout_marginTop="10dp"
                    />

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/job_disable_workflow_sync_text"
                    android:fontFamily="@font/lato_regular"
                    android:layout_marginTop="10dp"
                    android:textColor="?attr/primaryTextColor"
                    android:id="@+id/disableJobAutoSyncSwitch"
                    />

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/job_disable_asset_download_text"
                    android:fontFamily="@font/lato_regular"
                    android:layout_marginTop="15dp"
                    android:textColor="?attr/primaryTextColor"
                    android:id="@+id/disableAssetDownloadSwitch"
                    />

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/job_sda_token_download_text"
                    android:fontFamily="@font/lato_regular"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="?attr/primaryTextColor"
                    android:id="@+id/disableSDATokenSwitch"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resetFeaturesCard"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:contentPadding="20dp"
            app:cardBackgroundColor="?attr/cardColor"
            app:rippleColor="?attr/colorAccent"
            android:clickable="true"
            android:focusable="true"
            app:strokeColor="@drawable/stroke_color"
            app:strokeWidth="1dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_developer_mode_text"
                android:fontFamily="@font/lato_bold"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="?attr/colorAccent"
                />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>