<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018, Arm Limited and affiliates.
  ~ SPDX-License-Identifier: Apache-2.0
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorBackground"
    android:padding="10dp"
    tools:context=".screens.fragments.SettingsFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeWidth="1dp"
        app:cardElevation="0dp"
        app:strokeColor="@drawable/stroke_color"
        app:cardBackgroundColor="?attr/cardColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/lato_bold"
                android:textSize="14sp"
                />

            <RadioGroup
                android:id="@+id/rgTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbThemeDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark"
                    android:textColor="?attr/primaryTextColor"
                    android:fontFamily="@font/lato_regular"
                    android:buttonTint="?attr/colorAccent"
                    android:textSize="16sp"
                    android:padding="5dp"
                    />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbThemeLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="?attr/primaryTextColor"
                    android:buttonTint="?attr/colorAccent"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:checked="true"
                    />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dividerColor"
                android:alpha="0.12"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userActivityButton"
                android:text="@string/activity_info"
                android:textAllCaps="false"
                app:icon="?attr/iconUserActivity"
                app:iconTint="?attr/primaryIconColor"
                app:iconPadding="20dp"
                android:fontFamily="@font/lato_regular"
                android:textColor="?attr/primaryTextColor"
                android:gravity="start|center_vertical"
                app:rippleColor="?attr/colorAccent"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dividerColor"
                android:alpha="0.12"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/helpSupportButton"
                android:text="@string/help_and_support"
                android:textAllCaps="false"
                app:icon="?attr/iconHelp"
                app:iconTint="?attr/primaryIconColor"
                app:iconPadding="20dp"
                app:rippleColor="?attr/colorAccent"
                android:fontFamily="@font/lato_regular"
                android:textColor="?attr/primaryTextColor"
                android:gravity="start|center_vertical"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>